成績結果の表のデザイン変更

--- a/app/views/home/test.html.erb
+++ b/app/views/home/test.html.erb
@@ -54,7 +54,7 @@
   </div>
 </div>
 
-<div id="after-question">
+<div id="afterquestion">
   <div style="padding: 10px;">
     <div>
       あなたの得点は...
@@ -67,30 +67,30 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th scope="col">問題番号</th>
-          <th scope="col">英単語</th>
-          <th scope="col">日本語</th>
-          <th scope="col">品詞</th>
+          <th scope="col"><p style="font-size: 14px; margin-bottom: 0px;">No.</p></th>
+          <th scope="col" style="font-size: 15px">英単語</th>
+          <th scope="col" style="font-size: 15px">日本語</th>
+          <th scope="col" style="font-size: 9px">間違えた<br>回数</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <th scope="row">1</th>
-          <td>Caluculation</td>
-          <td>計算</td>
-          <td>名詞</td>
+          <th scope="row" style="font-size: 5px; margin-bottom: 0px;">1</th>
+          <td style="font-size: 14px; margin-bottom: 0px;">Caluculation</td>
+          <td style="font-size: 14px; margin-bottom: 0px;">計算</td>
+          <td style="text-align: ceneter;">3</td>
         </tr>
         <tr>
-          <th scope="row">2</th>
-          <td>Biology</td>
-          <td>生物（学）</td>
-          <td>名詞</td>
+          <th scope="row" style="font-size: 5px; margin-bottom: 0px;">2</th>
+          <td style="font-size: 14px; margin-bottom: 0px;">Biology</td>
+          <td style="font-size: 14px; margin-bottom: 0px;">生物（学）</td>
+          <td style="text-align: ceneter;">0</td>
         </tr>
         <tr>
-          <th scope="row">3</th>
-          <td>Accumulation</td>
-          <td>蓄積</td>
-          <td>名詞</td>
+          <th scope="row" style="font-size: 5px; margin-bottom: 0px;">3</th>
+          <td style="font-size: 14px; margin-bottom: 0px;">Accumulation</td>
+          <td style="font-size: 14px; margin-bottom: 0px;">蓄積</td>
+          <td>4</td>
         </tr>
       </tbody>
     </table>
