選択肢のシャッフルを実装

--- a/app/views/home/test.html.erb
+++ b/app/views/home/test.html.erb
@@ -54,7 +54,7 @@
   </div>
 </div>
 
-<div id="afterquestion">
+<div id="after-question">
   <div style="padding: 10px;">
     <div>
       あなたの得点は...
@@ -101,7 +101,7 @@
 <script type="text/javascript">
 $('#answer-wrapper').hide();
 $('#middle_test').hide();
-
+$('#after-question').hide();
 
 const quizSet = gon.words
 
