--- a/app/views/home/test.html.erb
+++ b/app/views/home/test.html.erb
@@ -3,6 +3,7 @@
     <h5><%= @wordbook.name %></h5>
     <h5><%= @words[0].level %></h5>
     <h5><%= @words.length %>単語</h5>
+    <h5><%= @testwords.length %>単語</h5>
   </div>
   <div>
     <p style="font-size: 13px;">以上でテストを開始してよろしいですか？</p>
@@ -68,7 +69,7 @@
           <th scope="col"><p style="font-size: 14px; margin-bottom: 0px;">No.</p></th>
           <th scope="col" style="font-size: 15px">英単語</th>
           <th scope="col" style="font-size: 15px">日本語</th>
-          <th scope="col" style="font-size: 9px">間違えた<br>回数</th>
+          <th class="wrong_count" scope="col" style="font-size: 9px">間違えた<br>回数</th>
         </tr>
       </thead>
       <tbody>
@@ -77,7 +78,7 @@
           <th scope="row" style="font-size: 5px; margin-bottom: 0px;"><%=i %></th>
           <td style="font-size: 14px; margin-bottom: 0px;"><%= word[:q] %></td>
           <td style="font-size: 14px; margin-bottom: 0px;"><%= word[:c][0] %></td>
-          <td style="text-align: ceneter;">-</td>
+          <td style="text-align: ceneter;"><%= word[:q_wrong_count] %></td>
         </tr>
       <% end %> 
       </tbody>
@@ -132,11 +133,13 @@ var countdown = function() {
     if (quizSet.length  == currentNum) {
       var p = document.getElementById('answer-line' + currentNum);
       p.style.color = 'red';
+      p.lastElementChild.textContent = Number(p.lastElementChild.textContent) + 1
       finishTest();
       postResult(student_id, wordtest_id, question_id, false)
     } else {
       var p = document.getElementById('answer-line' + currentNum);
       p.style.color = 'red';
+      p.lastElementChild.textContent = Number(p.lastElementChild.textContent) + 1
       resultQuestion();
       postResult(student_id, wordtest_id, question_id, false)
       resetTimer();
@@ -195,6 +198,7 @@ $(function() {
       $('#batsu').fadeIn();
       var p = document.getElementById('answer-line' + currentNum);
       p.style.color = 'red';
+      p.lastElementChild.textContent = Number(p.lastElementChild.textContent) + 1
       postResult(student_id, wordtest_id, question_id, false)
     }
     if (quizSet.length  == currentNum) {
@@ -216,6 +220,7 @@ $(function() {
       $('#batsu').fadeIn();
       var p = document.getElementById('answer-line' + currentNum);
       p.style.color = 'red';
+      p.lastElementChild.textContent = Number(p.lastElementChild.textContent) + 1
       clearInterval(timer);
       limitMs = restMs = 5000;
       $('#bar').attr('value', 0);
@@ -229,6 +234,7 @@ $(function() {
       $('#batsu').fadeIn();
       var p = document.getElementById('answer-line' + currentNum);
       p.style.color = 'red';
+      p.lastElementChild.textContent = Number(p.lastElementChild.textContent) + 1
       resetTimer();
       setTimeout("restartTest()", 3000);
     }
