テスト結果情報をnewsfieldページに表示

--- a/app/assets/stylesheets/vocabulary.css
+++ b/app/assets/stylesheets/vocabulary.css
@@ -193,7 +193,7 @@ progress::-moz-progress-bar {
   box-sizing: border-box;
 }
 
-.noidea-button > .btn, a.btn, button.btn {
+.noidea-button > .btn, a.btn {
   font-size: 15px;
   font-weight: 700;
   line-height: 1.5;
@@ -250,7 +250,7 @@ progress::-moz-progress-bar {
   text-align: right;
 }
 
-.before_start_cancel_buttons .btn-flat-simple {
+.before_start_cancel_buttons > .btn-flat-simple {
   position: relative;
   display: inline-block;
   font-weight: bold;
@@ -267,7 +267,7 @@ progress::-moz-progress-bar {
   text-align: center;
 }
 
-.after_test_buttons .btn-flat-simple {
+.after_test_buttons > .btn-flat-simple {
   position: relative;
   display: inline-block;
   font-weight: bold;
