--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -17,6 +17,58 @@
   border-bottom: solid 5px #f5f5f5;
 }
 
+.stu_card_content_words > .btn, a.btn {
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+  padding: 3px 10px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  border-color: white;
+  color: #212529;
+  background-color: white;
+}
+
+.btn-primary:focus, .btn-primary.focus,
+.btn-primary:focus, .btn-primary.focus {
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
+
+.stu_card_content_words > .btn-primary:hover {
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+  padding: 3px 10px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-color: white;
+  background-color: white;
+}
+
 .stu_card_info {
   display: -ms-grid;
   display: grid;
@@ -172,6 +224,11 @@
   font-size: 15px;
 }
 
+.stu_card_words {
+  font-weight: bold;
+  font-size: 15px;
+}
+
 .stu_card_content {
   display: -ms-grid;
   display: grid;
@@ -201,6 +258,19 @@
   height: 28px;
   border-radius: 50%;
   background: red;
+  text-align: center;
+  line-height: 28px;
+}
+
+.stu_card_content_words_circle {
+  font-family: serif;
+  font-size: 20px;
+  color: #f5f5f5;
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background: #0000FF;
   text-align: center;
   line-height: 28px;
 }
