正解の数を表示できるようにする

--- a/app/views/home/test.html.erb
+++ b/app/views/home/test.html.erb
@@ -63,7 +63,7 @@
     </div>
   </div>
   <div class="after_test_buttons">
-    <a href="#" class="btn-flat-simple" type="button"><i class="fa fa-caret-right"></i>終了する</a>
+    <a href="/news_field" class="btn-flat-simple" type="button"><i class="fa fa-caret-right"></i>終了する</a>
   </div>
   <div style="padding: 10px;">
     <table class="table table-bordered">
