--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -230,7 +230,7 @@
           </p>
           <div style="text-align: center;">
             <p style="font-size: 17px;margin-bottom: 5px;">
-  
+              <%= e[:results].corrects_count %>問正解
             </p>
           </div>
         </div>
