生徒ごとにワードテストの結果を表示

--- a/app/assets/stylesheets/word_tests.scss
+++ b/app/assets/stylesheets/word_tests.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the word_tests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.word-test-index-wrapper {
+  padding: 40px;
+}
+.book-title {
+  margin-top: 60px;
+}
+
+@media screen and (max-width: 600px) {
+  .word-test-index-wrapper {
+    padding: 40px 0;
+  }
+  tr > .result-td {
+    padding: 20px 0 !important;
+  }
+}
