スクレイプするための準備

--- a/app/views/teachers/fujita.html.erb
+++ b/app/views/teachers/fujita.html.erb
@@ -3,3 +3,4 @@
 <%= link_to "単語作成へ", new_word_path, class: "btn btn-warning mt-3" %>
 <%= link_to "単語一覧へ", words_path, class: "btn btn-danger mt-3" %>
 <%= link_to "単語帳作成へ", new_wordbook_path, class: "btn btn-secondary mt-3" %>
+<%= link_to "単語テスト結果一覧へ", word_tests_path, class: "btn btn-secondary mt-3" %>
