--- a/app/views/home/choise_retest.html.erb
+++ b/app/views/home/choise_retest.html.erb
@@ -1,5 +1,9 @@
-<h1>再テスト</h1>
-
-<%= link_to "１回間違えた単語", "/home/retest/#{@level}/#{@wordbook.id}/1", class: "btn btn-warning" %>
-<%= link_to "2回間違えた単語", "/home/retest/#{@level}/#{@wordbook.id}/2", class: "btn btn-warning" %>
-<%= link_to "3回間違えた単語", "/home/retest/#{@level}/#{@wordbook.id}/3", class: "btn btn-warning" %>
+<div class="choise_retest_wrapper">
+  <div class="content">
+    <h1>再テスト</h1>
+    
+    <%= link_to "１回間違えた単語", "/home/retest/#{@level}/#{@wordbook.id}/1", class: "btn btn-warning" %>
+    <%= link_to "2回間違えた単語", "/home/retest/#{@level}/#{@wordbook.id}/2", class: "btn btn-warning" %>
+    <%= link_to "3回間違えた単語", "/home/retest/#{@level}/#{@wordbook.id}/3", class: "btn btn-warning" %>
+  </div>
+</div>
