--- a/app/views/home/level.html.erb
+++ b/app/views/home/level.html.erb
@@ -7,7 +7,16 @@
   <div class="vocabulary-level">
     <ul>
       <% @levels.each do |level| %>
-      <li><%= level %></li>
+      <li style="margin-bottom:0px;"><span><%= level %></span></li>
+      <div class="wordbook-progress" style="text-align: right;">
+        <div class="progressWrapper">
+          <progress max="100" value="80"></progress>
+        </div>
+      </div>
+      <div style="text-align: right;">
+        <span style="font-size: 13px;">80% 正解</span>
+        <span>全500単語</span>
+      </div>
         <div class="number-of-vocabulary" style="margin:20px 3%">
           <ul style="padding: 10px 7%;">
             <li style="margin-bottom: 10px;"><a href="/home/test/<%= level %>/<%= @wordbook.id %>/10" style="color: black;">10単語</a></li>
