--- a/app/views/word_tests/show.html.erb
+++ b/app/views/word_tests/show.html.erb
@@ -1,6 +1,6 @@
 <div class="word-test-index-wrapper">
   <% @wordbooks.each do |book| %>
-    <h1 class="book-title"><%= book.name %></h1>
+    <h1 class="book-title"><span><%= book.name %></span></h1>
       <table class="table">
         <thead class="thead-dark">
           <tr>
